<resources>
    <string name="app_name">SimpleChat</string>
    <string name="test_button">Button</string>
    <string name="created">Created</string>
    <string name="counter">Счетчик</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="sign_up">Sign UP</string>
    <string name="logout">Logout</string>
    <string name="input_email">Input Email</string>
    <string name="input_message">Input Message</string>
    <string name="input_password">Input Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add_info">Add info about yourself</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failed1">Fill in all fields</string>
    <string name="register_failed2">Password must be at least 8 characters</string>
    <string name="register_failed3">Passwords are not equal</string>
    </resources>
