<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/colorMainText"
        android:hint="@string/input_email"
        android:textColorHint="@color/colorHintText"
        android:textCursorDrawable="@color/colorCursorText"
        android:gravity="start"
        android:paddingLeft="16sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="19sp"
        android:textColor="@color/colorMainText"
        android:hint="@string/input_password"
        android:textColorHint="@color/colorHintText"
        android:textCursorDrawable="@color/colorCursorText"
        android:layout_gravity="left"
        android:paddingLeft="16dp"
        android:gravity="start"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/buttonSI"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:background="@color/colorButtons"
        android:text="@string/sign_in"
        android:textColor="@color/colorButtonsText"
        android:textSize="18sp"
        android:layout_gravity="start"/>

    <Button
        android:id="@+id/buttonSU"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:background="@color/colorButtons"
        android:text="@string/sign_up"
        android:textColor="@color/colorButtonsText"
        android:textSize="18sp"
        android:layout_gravity="start"/>
</LinearLayout>

</LinearLayout>